# Retina-Advisors

./: .env.example  .flake8  .gitignore  .mcp.json  CLAUDE.md  Claude_Code_Course_Summary.md  build-status.md  dispute-analyzer-design-decisions.md  dispute-analyzer-eval-dataset.md  dispute-analyzer-stripe-field-map.md  pyproject.toml  requirements-dev.txt  requirements.txt  retina-advisors-prompt-system.md  retina-advisors-prompting-skill.md
.claude/: settings.json
.claude/agents/: architecture-validator.md  code-reviewer.md  eval-runner.md
.claude/hooks/: block-sensitive-writes.sh  format-python.sh
scripts/: claude-env.bat
src/retina/: analyzer.py  assembler.py  delivery_mcp.py  prompts.py  web.py
src/retina/templates/: base.html  form.html  report.html
tests/: test_analyzer.py  test_assembler.py  test_delivery_mcp.py  test_smoke.py  test_web.py
