[project]
name = "retina"
version = "0.1.0"
description = "AI-powered dispute analysis for DTC Stripe merchants."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: requires live API keys, excluded from default test run",
]
